This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Ensure {get,set}_escdelay and {get,set}_tabsize only implemented when the extensions are activated
Type: compile error Stage: resolved
Components: Build Versions: Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: BTaskaya, jcea, pablogsal
Priority: normal Keywords: patch

Created on 2020-02-29 18:48 by BTaskaya, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 18705 merged BTaskaya, 2020-02-29 18:50
Messages (2)
msg363005 - (view) Author: Batuhan Taskaya (BTaskaya) * (Python committer) Date: 2020-02-29 18:48
Python can't build curses on Solaris because of extensions aren't activated

/export/home/isidentical/cpython/Modules/_cursesmodule.c: In function ‘_curses_get_escdelay_impl’:
/export/home/isidentical/cpython/Modules/_cursesmodule.c:3272:28: error: ‘ESCDELAY’ undeclared (first use in this function)
     return PyLong_FromLong(ESCDELAY);
                            ^
/export/home/isidentical/cpython/Modules/_cursesmodule.c:3272:28: note: each undeclared identifier is reported only once for each function it appears in
/export/home/isidentical/cpython/Modules/_cursesmodule.c: In function ‘_curses_set_escdelay_impl’:
/export/home/isidentical/cpython/Modules/_cursesmodule.c:3296:29: error: implicit declaration of function ‘set_escdelay’ [-Werror=implicit-function-declaration]
     return PyCursesCheckERR(set_escdelay(ms), "set_escdelay");
                             ^
/export/home/isidentical/cpython/Modules/_cursesmodule.c: In function ‘_curses_set_tabsize_impl’:
/export/home/isidentical/cpython/Modules/_cursesmodule.c:3335:29: error: implicit declaration of function ‘set_tabsize’ [-Werror=implicit-function-declaration]
     return PyCursesCheckERR(set_tabsize(size), "set_tabsize");
msg363233 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2020-03-03 02:00
New changeset 4991cf47c487500fdedc34f0a2eb4b7468a67c3c by Batuhan Taşkaya in branch 'master':
bpo-39802: Only expose set_escdelay and set_tabsize when curses extensions are activated (GH-18705)
https://github.com/python/cpython/commit/4991cf47c487500fdedc34f0a2eb4b7468a67c3c
History
Date User Action Args
2022-04-11 14:59:27adminsetgithub: 83983
2020-03-03 09:56:43pablogsalsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-03-03 02:00:17pablogsalsetnosy: + pablogsal
messages: + msg363233
2020-02-29 19:04:30BTaskayasetnosy: + jcea

versions: + Python 3.9
2020-02-29 18:50:51BTaskayasetkeywords: + patch
stage: patch review
pull_requests: + pull_request18065
2020-02-29 18:48:54BTaskayacreate