bpo-39802: Only implement set_escdelay and set_tabsize when curses extensions are activated